# ChunkArena

./: .gitignore  README.md  benchmark_report.xlsx  chunk_stats.csv  chunking.py  config.py  evaluate.py  extract_text.py  pyproject.toml  raw_2_normalize_json.py  raw_results.csv  requirements.txt
.archive/: evaluate_with_table_data.py
.archive/created_chunks_with_old_method/: chunks_fixed_size.json  chunks_markdown.json  chunks_sentence.json
.archive/vector_db/: faiss_db.py  milvus_db.py
Golden_dataset/: Banking_system.csv
backup_working_files/: chunking.py  evaluate.py  extracted_docs.json
backup_working_files/vector_db/: qdrant_db.py
chunkers/: __init__.py  base.py  fixed_size.py  header.py  paragraph.py  recursive.py  semantic.py  sentence.py
created_chunks/: chunks_fixed_size.json  chunks_header.json  chunks_sentence.json
data_extraction_from_source_file/: Banking_system_extraction.json  extract_text.py
docs/: config.md  entrypoints.md
evaluated_chunk_csv_records/: old_chunking_evaluation_full.xlsx
evaluation/: __init__.py  chunk_stats.py  chunk_store.py  data_loader.py  models.py  report_excel.py  retrieval.py  runner.py
metrics/: __init__.py  avg_rank.py  composite.py  embedding.py  hit.py  mrr.py  ndcg.py  precision.py  rag_quality.py  recall.py  redundancy.py  relevance.py  token_cost.py
notebooks/: evaluation_logic.md
raw_to_norm._json_for_chunks/: raw_2_normalize_json.py
scrapped_data/: Recession.docx
scripts/: run_chunking.py  run_evaluation.py  run_extraction.py  run_normalization.py  wiki_scraper.py
vector_db/: qdrant_db.py
(+133 files in other folders)
